corrected keyframes bug on iphones

--- a/app/assets/stylesheets/components/_voting_form.scss
+++ b/app/assets/stylesheets/components/_voting_form.scss
@@ -110,7 +110,16 @@ div.my-rating-wrapper {
       50% {background: $gray-darker;}
       100% {background: $gray-lighter;}
   }
+  @-webkit-keyframes ticker {
+      0% {background: $gray-lighter;}
+      50% {background: $gray-darker;}
+      100% {background: $gray-lighter;}
+  }
   @keyframes noticker {
+      from {background: $green;}
+      to {background: $green}
+  }
+  @-webkit-keyframes ticker {
       from {background: $green;}
       to {background: $green}
   }
